--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
     crossorigin="anonymous"></script>
   <script src="./js/jquery-3.3.1.min.js" type="text/javascript"></script>
 
-
-
-
 </head>
 
 <body>
-
-
 
   <!-- MODAL INFO -->
 
@@ -65,7 +60,7 @@
               <label for="title">Titula:</label>
               <div class="row form-animation">
                 <span id="steps1" class="animation-circle steps">1</span>
-                <select type="text" id="id_title" name="title">
+                <select id="id_title" name="title">
                   <option></option>
                   <option>Mr.</option>
                   <option>Ms.</option>
@@ -77,14 +72,14 @@
               <label for="first">Ime:</label>
               <div class="row form-animation">
                 <span id="steps2" class="animation-circle steps">2</span>
-                <input type="text" id="id_firstname" name="first">
+                <input type="text" id="id_firstname" name="first" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
               <label for="last">Prezime:</label>
               <div class="row form-animation">
                 <span id="steps3" class="animation-circle steps">3</span>
-                <input type="text" id="id_lastname" name="last">
+                <input type="text" id="id_lastname" name="last" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
@@ -99,21 +94,21 @@
               <label for="email">Email adresa:</label>
               <div class="row form-animation">
                 <span id="steps5" class="animation-circle steps">5</span>
-                <input name="email" type="email" id="id_email" name="email">
+                <input name="email" type="email" id="id_email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
               </div>
             </div>
             <div class="form-group">
               <label for="phone">Broj telefona:</label>
               <div class="row form-animation">
                 <span id="steps6" class="animation-circle steps">6</span>
-                <input type="tel" id="id_phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <input type="tel" id="id_phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
               </div>
             </div>
             <div class="form-group">
               <label for="cell">Broj mobilnog telefona:</label>
               <div class="row form-animation">
                 <span id="steps7" class="animation-circle steps">7</span>
-                <input type="tel" id="id_cell" name="cell" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                <input type="tel" id="id_cell" name="cell" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
               </div>
             </div>
             <hr>
@@ -121,21 +116,21 @@
               <label for="state">Drzava:</label>
               <div class="row form-animation">
                 <span id="steps8" class="animation-circle steps">8</span>
-                <input type="text" id="id_state" name="state">
+                <input type="text" id="id_state" name="state" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
               <label for="city">Grad:</label>
               <div class="row form-animation">
                 <span id="steps9" class="animation-circle steps">9</span>
-                <input type="text" id="id_city" name="city">
+                <input type="text" id="id_city" name="city" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <div class="form-group">
               <label for="street">Ulica:</label>
               <div class="row form-animation">
                 <span id="steps10" class="animation-circle steps">10</span>
-                <input type="text" id="id_street" name="street">
+                <input type="text" id="id_street" name="street" pattern="^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$" required>
               </div>
             </div>
             <hr>
@@ -149,8 +144,6 @@
             <br>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <!-- <button type="button" class="btn btn-primary" onclick="addUser('update', this);">Save changes</button> -->
-              <!-- <button type="button" class="btn btn-primary" onclick="addUser('insert');">Submit</button> -->
               <button id="submit" type="button" class="btn btn-primary">Submit</button>
             </div>
           </form>
@@ -176,8 +169,6 @@
   <script src="./js/bootstrap.min.js" type="text/javascript"></script>
   <script src="./js/fetched_data.js" type="text/javascript"></script>
   <script src="./js/main.js" type="text/javascript"></script>
-  <script src="./js/grid.js" type="text/javascript"></script>
-  <script src="./js/edit.js" type="text/javascript"></script>
 
 </body>
 
